# Tools

./: .gitignore  .gitmodules  1.py  2.py  README.md  extseen.py  pyproject.toml
Galgame/: File.py  File2.py  TextCleaner_BGI.py  TextCleaner_BGI_C.py  TextCleaner_QLIE.py
Galgame/ArtemisEngine/: File.py  TextCleaner_ArtemisEngine_lua.py  TextCleaner_ArtemisEngine_txt.py
Galgame/BGI/: TextCleaner_BGI.py  TextCleaner_BGI_C.py
Galgame/ExHIBIT/: 1.py  dec_rld.py
Galgame/FSN2/: decrypt_epk.py  epk_name_hash.py  main.py  unpack_dat.py
Galgame/Interheart/: File.py  unpacker.py
Galgame/Malie/: 1.py
Galgame/NeXAS/: 1.py
Galgame/NeXAS/tool/: reader.py
Galgame/NekoSDK/: main.py
Galgame/SiglusEngine/: TextCleaner_SiglusEngine.ini  TextCleaner_SiglusEngine_File.py
Galgame/YuRis/: TextCleaner_YuRis.py
Galgame/_Single/Kieta Sekai to Tsuki to Shoujo -The world was prayed by the girl living a thousand years-/: 1.py
Galgame/_Single/VIRTUAL GIRL @ WORLD'S END/: 1.py  2.py  3..py  assetbundles_hashed.txt  assetbundles_list.txt  hook.cjs
Galgame/krkr/: 1_Scan_PSB.py  2_Restore_ScnName.py  3_Parse_Scn.py  4_cxdec_Name.py  TextCleaner_Kirikiri_ks.py
Galgame/majiro/: dec_mjo.py
LocalGame/Engine/_Utage/: Book.py
LocalGame/Single/Telltale Games/: File.py  MSM2.py  TWD.py
OnlineGame/Unity/: Unpacker.py
OnlineGame/Unity/BanG Dream!/: downloader.py  script.py  unpacker.py
OnlineGame/Unity/Blue Archive/: DB.py  Excel.fbs  MX_crypto.py  bytes.py  bytes_dec.py  bytes_parser.py  (+3 more)
OnlineGame/_CRIWARE/: move_cri.py
OnlineGame/_WWISE_BNK/: README.md  main.py
Other/: 2dfan.py  CA.py  Calculater_Total_Duration_F.py  Clean_OggS.py  Manifest2Lua.py  calculate_duration_multi_lang.py  qu.py  vndb.py  xl.py
Single/MCSM1/: File.py
Single/Telltale Games/: MSM1.py
Unity/Blue Archive/: zip_dec.py
Unity/Brown Dust 2/: downloader.py
Unity/Iris Mysteria/: download.py  script.py
Unity/Madoka Magica Magia Exedra/: downloader.py
Unity/Princess Connect! Re Dive/: 1.py  downloader.py  script.py  unpacker.py
Unity/Reverse1999/: decrypt_ab.py  decrypt_json.py  file.py  script.py  unpacker.py  unzip.py
Unity/THE IDOLM@STER CINDERELLA GIRLS/: unpacker.py
Unity/Umamusume/: 1.py
Unity/_CRIWARE/: move_cri.py  rename_wav.py
Unity/_Utage/: Book.py  DicingTextures.py
Unreal_Engine/WutheringWaves/: 01.py  TextCleaner_WutheringWaves_01.py  TextCleaner_WutheringWaves_02.py  TextCleaner_WutheringWaves_03.py
VisualNovel/: File.py  File2.py
VisualNovel/Engine/: 4.py  TextCleaner_CMVS.py  TextCleaner_CatSystem2.py  TextCleaner_CatSystemUnity.py  TextCleaner_DebonosuWorks.py  TextCleaner_File.py  TextCleaner_QLIE.py  TextCleaner_Softpal.py  TextCleaner_Will Co.py  TextCleaner_alice.py  TextCleaner_minori.py  Text_Cleaner_Stack.py  a3.py
VisualNovel/Engine/krkr/caculate_cxdecv2_hash/: CMakeLists.txt
VisualNovel/Engine/krkr/caculate_cxdecv2_hash/src/: krkr_hxv4_dumphash.cpp
VisualNovel/Engine/krkr/caculate_cxdecv2_hash/src/compat/: commdef_v110.h  tp_stub.h  winhook_v350.h  winversion_v100.def  winversion_v100.h
_ThirdParty/PyCriCodecs/: README.md  main.py  move_cri.py  rename_wav.py  test.py
_ThirdParty/freemote_python/: Program.py  README.md
_ThirdParty/luac-parser/: disasm.py
_ThirdParty/wwise_wem/: wem_extract.py
(+1208 files in other folders)
