[project]
name = "tools"
version = "1.0.0"
description = "game tools"
requires-python = ">=3.12"
dependencies = [
    "apsw-sqlite3mc>=3.50.4.0",
    "av>=15.0.0",
    "chardet>=5.2.0",
    "flatbuffers>=25.2.10",
    "lupa>=2.5",
    "lzss>=0.3",
    "msgpack>=1.1.1",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pefile>=2024.8.26",
    "pycryptodome>=3.23.0",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "ruamel-yaml>=0.18.15",
    "selenium>=4.34.2",
    "tqdm>=4.67.1",
    "unitypy>=1.23.0",
    "unrpa>=2.3.0",
    "xmltodict>=0.14.2",
    "xxhash>=3.5.0",
]
